--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:cpb="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.fvinnen.de.circleprogressbar.CircleProgressBar
+        android:id="@+id/circleProgress"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        cpb:direction="right"
+        cpb:max="100"
+        cpb:min="0"
+        cpb:progress="75"
+        cpb:progressBarAlpha="1"
+        cpb:progressBarBackgroundAlpha="0.3"
+        cpb:progressBarBackgroundColor="@color/background_floating_material_dark"
+        cpb:progressBarBackgroundThickness="18sp"
+        cpb:progressBarColor="@color/accent_material_light"
+        cpb:progressBarThickness="12dp"
+        cpb:startAngle="-90"
+        cpb:text="10"
+        cpb:textColor="@color/accent_material_light"
+        cpb:textSize="150dp" />
 
 </RelativeLayout>
